bug fix on javascript, hamburger effect on mobile

--- a/assets/css/customs.css
+++ b/assets/css/customs.css
@@ -1111,3 +1111,14 @@ h1 {
   outline: 2px solid var(--color-accent);
   outline-offset: 2px;
 }
+
+.card-icon svg {
+  stroke: var(--color-accent);
+}
+
+.card-icon svg {
+  fill: var(--color-accent);
+}
+
+
+
